stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: lamp-mysql
  labels:
    app: db
spec:
  ports:
    - port: 3306
  selector:
    app: db
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lamp-mysql
  labels:
    app: apache-pod
spec:
  serviceName: "lamp-mysql"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
