ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamp-ingress
  labels:
    app: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lamp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-pod
            port:
              number: 8080
